@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Deprecated the XML risk exporters
   * Restored the parameter `asset_loss_table` in the event based calculators
   * Removed the `individual_curves` flag: now by default only the statistical
     hazard outputs are exported
